[package]
name = "mathical"
description = "An intelligent, GUI-based, and cross-platform graphing calculator, written in Rust."
version = "0.1.1"
authors = ["EternalMoon1234", "importly"]
license = "MIT"
repository = "https://github.com/eternalmoon1234/mathical"
edition = "2018"

[dependencies]
fltk = "0.15.6"
colored = "2.0.0"