[package]
name = "mathical"
description = "A powerful, and visual tool for graphing mathematical functions and equations."
version = "0.1.3"
authors = ["EternalMoon1234", "importly"]
license = "MIT"
repository = "https://github.com/eternalmoon1234/mathical"
edition = "2018"

[dependencies]
fltk = "0.15.6"
colored = "2.0.0"